--- a/afu_ekat2005_pub/build.gradle
+++ b/afu_ekat2005_pub/build.gradle
@@ -10,6 +10,7 @@ task transferAfuEkat2005(type: Db2DbTask){
             new TransferSet('afu_ekat2005_pub_industrie_gewerbe.sql', 'afu_ekat2005_pub.industrie_gewerbe', true),
             new TransferSet('afu_ekat2005_pub_haushalt.sql', 'afu_ekat2005_pub.haushalt', true),
             new TransferSet('afu_ekat2005_pub_verkehr.sql', 'afu_ekat2005_pub.verkehr', true),
-            new TransferSet('afu_ekat2005_pub_land_forstwirtschaft.sql', 'afu_ekat2005_pub.land_forstwirtschaft', true)
+            new TransferSet('afu_ekat2005_pub_land_forstwirtschaft.sql', 'afu_ekat2005_pub.land_forstwirtschaft', true),
+            new TransferSet('afu_ekat2005_pub_biogene_quelle.sql', 'afu_ekat2005_pub.biogene_quelle', true)
     ];
 }
