--- a/afu_uplus_pub/build.gradle
+++ b/afu_uplus_pub/build.gradle
@@ -6,6 +6,7 @@ task transferAfuUplus(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('afu_uplus_pub_anlage.sql', 'afu_uplus_pub.anlage', true)
+            new TransferSet('afu_uplus_pub_anlage.sql', 'afu_uplus_pub.anlage', true),
+            new TransferSet('afu_uplus_pub_tank.sql', 'afu_uplus_pub.tank', true)
     ];
 }
