--- a/afu_altlasten_pub/build.gradle
+++ b/afu_altlasten_pub/build.gradle
@@ -1,6 +1,6 @@
 import ch.so.agi.gretl.steps.*
 
-defaultTasks 'transferAfuAltlasten'
+defaultTasks 'transferAfuAltlasten', 'transferAfuAltlast4Web'
 
 task transferAfuAltlasten(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
@@ -10,4 +10,14 @@ task transferAfuAltlasten(type: Db2DbTask){
             // 'afu_altlasten_pub.altlasten_belastete_standorte_internet', true)
             new TransferSet('afu_altlasten_pub_belastete_standorte.sql','afu_altlasten_pub.belastete_standorte', true)
     ];        
+}
+
+task transferAfuAltlast4Web(type: Db2DbTask){
+    //todo: change sourceDB to altlast4web-Db
+    //sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
+    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    transferSets = [
+            new TransferSet('afu_altlasten_pub_belastete_standorte_altlast4web.sql',
+                    'afu_altlasten_pub.belastete_standorte_altlast4web', true)
+    ];
 }
