--- a/arp_aggloprogramme_pub/build.gradle
+++ b/arp_aggloprogramme_pub/build.gradle
@@ -7,6 +7,8 @@ task transferArpAggloprogramme(type: Db2DbTask){
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet('arp_aggloprogramme_pub_agglomrtnsprgrmme_agglomerationsprogramm.sql',
-                    'arp_aggloprogramme_pub.agglomrtnsprgrmme_agglomerationsprogramm', true)
+                    'arp_aggloprogramme_pub.agglomrtnsprgrmme_agglomerationsprogramm', true),
+            new TransferSet('arp_aggloprogramme_pub_agglomrtnsprgrmme_massnahme.sql',
+                    'arp_aggloprogramme_pub.agglomrtnsprgrmme_massnahme', true)
     ];
 }
