--- a/arp_naturschutz_pub/build.gradle
+++ b/arp_naturschutz_pub/build.gradle
@@ -6,6 +6,7 @@ task transferArpNaturschutz(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('arp_naturschutz_pub_karch_objekt.sql', 'arp_naturschutz_pub.karch_objekt', true)
+            new TransferSet('arp_naturschutz_pub_karch_objekt.sql', 'arp_naturschutz_pub.karch_objekt', true),
+            new TransferSet('arp_naturschutz_pub_amphibienstandort.sql', 'arp_naturschutz_pub.amphibienstandort', true)
     ];
 }
