--- a/arp_npl_pub/build.gradle
+++ b/arp_npl_pub/build.gradle
@@ -6,6 +6,9 @@ task transferArpNpl(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('arp_npl_pub_nutzungsplanung_grundnutzung.sql', 'arp_npl_pub.nutzungsplanung_grundnutzung', true)
+            new TransferSet('arp_npl_pub_nutzungsplanung_grundnutzung.sql', 'arp_npl_pub.nutzungsplanung_grundnutzung',
+                    true),
+            new TransferSet('arp_npl_pub_nutzungsplanung_nutzungsplanung_beschriftung.sql',
+                    'arp_npl_pub.nutzungsplanung_nutzungsplanung_beschriftung', true)
     ];
 }
