--- a/arp_npl_pub/build.gradle
+++ b/arp_npl_pub/build.gradle
@@ -9,6 +9,8 @@ task transferArpNpl(type: Db2DbTask){
             new TransferSet('arp_npl_pub_nutzungsplanung_grundnutzung.sql', 'arp_npl_pub.nutzungsplanung_grundnutzung',
                     true),
             new TransferSet('arp_npl_pub_nutzungsplanung_nutzungsplanung_beschriftung.sql',
-                    'arp_npl_pub.nutzungsplanung_nutzungsplanung_beschriftung', true)
+                    'arp_npl_pub.nutzungsplanung_nutzungsplanung_beschriftung', true),
+            new TransferSet('arp_npl_pub_nutzungsplanung_ueberlagernd_flaeche.sql',
+                    'arp_npl_pub.nutzungsplanung_ueberlagernd_flaeche', true)
     ];
 }
