--- a/ada_adagisd_pub/build.gradle
+++ b/ada_adagisd_pub/build.gradle
@@ -7,6 +7,7 @@ task transferAdagisd(type: Db2DbTask){
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet('ada_adagisd_pub_object.sql', 'ada_adagisd_pub.object', true),
-            new TransferSet('ada_adagisd_pub_punktgeometrien.sql', 'ada_adagisd_pub.punktgeometrien', true)
+            new TransferSet('ada_adagisd_pub_punktgeometrien.sql', 'ada_adagisd_pub.punktgeometrien', true),
+            new TransferSet('ada_adagisd_pub_polygongeometrien.sql', 'ada_adagisd_pub.polygongeometrien', true)
     ];
 }
