--- a/arp_nutzungsplanung_kanton_pub/Jenkinsfile
+++ b/arp_nutzungsplanung_kanton_pub/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
                 emailext (
                     recipientProviders: [requestor()],
                     subject: "Nutzungsplanung zum Review bereit (GRETL-Job ${JOB_NAME} ${BUILD_DISPLAY_NAME})",
-                    body: "Mit dem GRETL-Job ${JOB_NAME} (${BUILD_DISPLAY_NAME}) wurden Daten der Nutzungsplanung "Kanton" nachgeführt, die ein Review erfordern. Nach dem Review unter https://${BUILD_URL.split('/')[2].replace('gretl', 'geo')}/map?t=nutzungsplanung_review können Sie unter folgendem Link die Publikation der Daten veranlassen oder abbrechen: ${RUN_DISPLAY_URL}."
+                    body: "Mit dem GRETL-Job ${JOB_NAME} (${BUILD_DISPLAY_NAME}) wurden Daten der Nutzungsplanung Kanton nachgeführt, die ein Review erfordern. Nach dem Review unter https://${BUILD_URL.split('/')[2].replace('gretl', 'geo')}/map?t=nutzungsplanung_review können Sie unter folgendem Link die Publikation der Daten veranlassen oder abbrechen: ${RUN_DISPLAY_URL}."
                 )
             }
         }
@@ -53,8 +53,8 @@ pipeline {
         success {
             emailext (
                 recipientProviders: [requestor()],
-                subject: "Daten der Nutzungsplanung "Kanton" sind publiziert (GRETL-Job ${JOB_NAME} ${BUILD_DISPLAY_NAME})",
-                body: "Die Daten der Nutzungsplanung für "Kanton" des GRETL-Jobs ${JOB_NAME} (${BUILD_DISPLAY_NAME}) wurden erfolgreich publiziert. Die Log-Meldungen dazu finden Sie unter ${RUN_DISPLAY_URL}."
+                subject: "Daten der Nutzungsplanung Kanton sind publiziert (GRETL-Job ${JOB_NAME} ${BUILD_DISPLAY_NAME})",
+                body: "Die Daten der Nutzungsplanung für Kanton des GRETL-Jobs ${JOB_NAME} (${BUILD_DISPLAY_NAME}) wurden erfolgreich publiziert. Die Log-Meldungen dazu finden Sie unter ${RUN_DISPLAY_URL}."
             )
         }
         unsuccessful {
