--- a/arp_nutzungsplanung_kanton_pub/job.properties
+++ b/arp_nutzungsplanung_kanton_pub/job.properties
@@ -1,3 +1,3 @@
 logRotator.numToKeep=unlimited
-parameters.stringParam:buildDescription;Keine Beschreibung angegeben;Beschreibung/Grund für die Publikation der Daten
+parameters.stringParams:buildDescription;Keine Beschreibung angegeben;Beschreibung/Grund für die Publikation der Daten
 authorization.permissions=gretl-users-bjsvw
