--- a/agi_check_ili_export/build.gradle
+++ b/agi_check_ili_export/build.gradle
@@ -70,6 +70,7 @@ datasets.each { dataset ->
         database = dbdatabase
         dbschema = schema
         models = modelNames
+        if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
         disableValidation = true
         logFile = file(Paths.get(pathToTempFolder, datasetId + "_" + todaysDate  + "_export.log"))
         //dataFile = file(Paths.get(pathToTempFolder, datasetId + "_" + todaysDate + ".xtf"))
@@ -80,6 +81,7 @@ datasets.each { dataset ->
     task "validateData_$datasetId"(type: IliValidator, dependsOn: "exportDataset_$datasetId") {
         //dataFiles = [Paths.get(pathToTempFolder, datasetId + "_" + todaysDate + ".xtf")]
         dataFiles = [Paths.get(pathToTempFolder, datasetId + ".xtf")]
+        if (findProperty('ilivalidatorModeldir')) modeldir = ilivalidatorModeldir
         logFile = file(Paths.get(pathToTempFolder, datasetId + "_validation.log"))
         xtflogFile = file(Paths.get(pathToTempFolder, datasetId + "_validation.xtf"))
         failOnError = false
