[agi_av_import_export] modeldir setzen

--- a/agi_av_import_export/build.gradle
+++ b/agi_av_import_export/build.gradle
@@ -106,6 +106,7 @@ task unzipFiles(dependsOn: 'uploadFiles') {
 task createFederalFiles(type: Av2ch, dependsOn: 'unzipFiles') {
     inputFile = fileTree(pathToUnzipFolder) { include '*.itf' }
     outputDirectory = file(pathToFederalFolder)
+    if (findProperty('ilivalidatorModeldir')) modeldir = ilivalidatorModeldir
     zip = true
 
     doLast {
